border add on section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     .card {
         width: 200px;
     }
+    .border{
+        border: 1px solid #d1d7dc;
+        
+    }
 </style>
 
 <body>
@@ -177,7 +181,7 @@
             <a href="">Drawing </a>
         </div>
     </main>
-    <section>
+    <section  class="border">
         <div class="head">
             <h2>
                 Expand your career opportunities with Python
