--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@ justify-content:space-between ;
         </h2>
         <div class="card-container">
             <div class="card">
-                <img width="200" src="https://1.bp.blogspot.com/-pdqcVeIQp64/XDX7TzdRdcI/AAAAAAAAM8E/ZmGuB6caZqIGmEflGHcj3zgXJJrmqRLdgCLcBGAs/w1200-h630-p-k-no-nu/Free%2BCourses%2Bto%2Blearn%2BJavaScript.jpg"
-                    alt="">
+                <img width="200" src="https://cdn.geekboots.com/geek/javascript-meta-1652702081069.jpg">
                 <h3 class="title">The modern JavaScript course for everyone! Master JavaScript with projects, challenges and theory. Many courses in one!</h3>
                 <span>Hassan Zakir, The Coder</span>
 
